glx/testdata/invalid/assertion-quality-int-pointer/assertions/assertion-quality-int.glx
assertions:
  assertion-quality-int:
    subject: person-123
    claim: name
    value: "John"
    citations:
      - citation-123
    quality: 99


